# csse4011-weather-station

./: README.md
app/: CMakeLists.txt  Kconfig  overlay-wifi.conf  prj.conf  sample.yaml
app/boards/: m5stack_core2_procpu.overlay
app/include/: simple_adc.h  sockets.h  weather_station.h  wifi.h
app/socs/: esp32_procpu.conf
app/src/: main.c  simple_adc.c  sockets.c  weather_station.c  wifi.c
